# redun_psij

./: .buildinfo  .gitignore  README.md  api.html  flake.nix  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml
examples/: .gitignore  flake.nix  pipeline.py
examples/src/example/: util.py
examples/src/example/tasks/: __init__.py  fastqc.py  multiqc.py
src/redun-psij/: __init__.py  executor.py
src/redun_psij/: executor.py  job_attributes.py
