[project]
name = "redun_psij"
version = "0.1.0a1"
description = "PSI/J Executor for Redun"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Simon Guest", email = "simon.guest@agresearch.co.nz" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/redun_psij"]

[tool.pyright]
reportUnusedCallResult = "warning"
